# srcJINR

./: .gitignore  CMakeLists.txt  README.md  SetEnv.sh
bmndata/: BmnTrigWaveDigit.cxx  BmnTrigWaveDigit.h
decoder/: BmnGemRaw2Digit.cxx  BmnRawDataDecoder.cxx  BmnRawDataDecoder.h  BmnTof1Raw2Digit.cxx  BmnTrigRaw2Digit.cxx  BmnTrigRaw2Digit.h
eventdisplay/: MpdHitPointSetDraw.cxx
gem/: BmnGemStripHitMaker.cxx  BmnGemStripHitMaker.h  BmnGemStripStation.cxx  BmnGemStripStationSet.cxx
geometry/: TOF400_RUN7_SRC_new.root
input/: GEM_noisy_Channels_2551.txt  GEM_pedestals_2551.txt  SILICON_noisy_Channels_2551.txt  SILICON_pedestals_2551.txt  TQDC16VS-046F-0C75-ADC.ini  TQDC16VS-046F-0C75-TDC.ini  TQDC16VS-046F-0C75.ini  TQDC16VS-076D-3C3C-ADC.ini  TQDC16VS-076D-3C3C-TDC.ini  Trig_PlaceMap_Run7_SRC.txt  Trig_map_Run7_SRC.txt
macro/eventdisplay/: current_geo_file.root  eventdisplay.C
macro/raw/: BmnDataToRoot.C  chain.C  decodeData.sh  processList.sh  runList.txt
macro/run/: current_geo_file.root  evetest.root  geometry.C  run_reco_bmn.C  run_sim_bmn.C
macro/run/geometry_run/: geofile_full_RUN7.root
macro/srcAnalysis/: CMakeLists.txt  Process_Gem_Macro.C  geofile_full_src_noZshift.root  readField.cpp
macro/srcAnalysis/checkFile/: CMakeLists.txt  Z2plot.cpp  calcPedestals.cpp  fileQuality.cpp  identify12C.cpp
macro/srcAnalysis/event_display/: CMakeLists.txt  Det_EventDisplay.cpp  Det_EventDisplay.h  event_display.cpp
macro/srcAnalysis/t0TimeRes/: CMakeLists.txt  T0_timewalk.cpp  nonT0-timewalk.cpp  prepResolution.cpp  resolution.cpp  skimForNonT0.cpp  skimForT0.cpp
macro/srcAnalysis/tof400/: CMakeLists.txt  class_tofAnalysis.cpp  fastTimeZ2.cpp  gammaPeak.cpp  multiplicity.cpp  testUnion.cpp  tofAnalysis.cpp  tofMultiHit.cpp
macro/srcAnalysis/tof400/clustering/: tofCluster.cpp
macro/srcAnalysis/tof400/gammaSearch/: gammaPeak.C  subtract.C
macro/srcAnalysis/tof400/stripAlignment/: alignStrips.cpp  shiftsCorrection.C
macro/srcAnalysis/tof400/timeWalk/: tofTimeWalk.cpp
macro/srcAnalysis/tof_mwpc/: CMakeLists.txt  playSegments.cpp  tof_mwpc.cpp  wireTopology.cpp
macro/srcAnalysis/tracking/: track_arms.cpp
macro/srcAnalysis/trigAndTof/: CMakeLists.txt  fullAnalysis.cpp
mwpc/: BmnMWPCDetector.cxx  BmnMWPCDetector.h  BmnMwpcHitFinder.cxx  BmnMwpcHitFinder.h  BmnMwpcTrackFinder.cxx  BmnMwpcTrackFinder.h  BmnMwpcTrackToDC.cxx  BmnMwpcTrackToDC.h  CMakeLists.txt  LinkDef.h
src_display/: CMakeLists.txt  SRCEventDisplay.cxx  SRCEventDisplay.h  SRCEventDisplayLinkDef.h
tof1/: BmnTOF1Conteiner.cxx  BmnTOF1Conteiner.h  BmnTOF1Detector.cxx  BmnTOF1Detector.h  BmnTOF1LinkDef.h  BmnTof1GeoUtils.cxx  BmnTof1HitProducer.cxx
tof1/old_class_bmn/: BmnTOF1Detector-bmnOld.cxx  BmnTof1GeoUtils-bmnOld.cxx
